test/integration/bad/tuples/bad_unpack_overlap2.stan
generated quantities {
  int i = 1, j = 1;
  array[1] tuple(int, int) tup;
  (tup[i].1, tup[j].1) = (1, 2);
}
